--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  body {
+    background-color: #25291C;
+  }
 </head>
 <body>
-  <h1>鈴音製作所HP (超簡易版)</h1>
-  <p><br></p>
-  <h2>配布物</h2>
-  <h3 style="padding-left: 40px;" data-mce-style="padding-left: 40px;">スペキュラー京急</h3>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://twitter.com/50105tobu/status/1577687533269360640" data-mce-href="https://twitter.com/50105tobu/status/1577687533269360640">https://twitter.com/50105tobu/status/1577687533269360640</a></p>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br></p>
-  <h2>資料室</h2>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;">主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開する予定です。</p>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1">https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1</a></p>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br data-mce-bogus="1"></p>
-  <p><br></p>
-  <h2>活動場所</h2>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg" data-mce-href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg">YouTube</a></p>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://twitter.com/50105tobu" data-mce-href="https://twitter.com/50105tobu">Twitter</a></p>
-  <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br></p>
+  <font color="white">
+    <h1>鈴音製作所HP (超簡易版)</h1>
+    <p><br></p>
+    <h2>配布物</h2>
+    <h3 style="padding-left: 40px;" data-mce-style="padding-left: 40px;">スペキュラー京急</h3>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://twitter.com/50105tobu/status/1577687533269360640" data-mce-href="https://twitter.com/50105tobu/status/1577687533269360640">https://twitter.com/50105tobu/status/1577687533269360640</a></p>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br></p>
+    <h2>資料室</h2>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;">主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開する予定です。</p>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1">https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1</a></p>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br data-mce-bogus="1"></p>
+    <p><br></p>
+    <h2>活動場所</h2>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg" data-mce-href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg">YouTube</a></p>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://twitter.com/50105tobu" data-mce-href="https://twitter.com/50105tobu">Twitter</a></p>
+    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br></p>
+  </font>
 </body>
 </html>
