--- a/index.html
+++ b/index.html
@@ -3,23 +3,59 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
-<body bgcolor="#292929" text="#dcdcdc" link="#8db2e5" alink="#8db2e5" vlink="#c76ed7">
-  <font color="white">
+<body bgcolor="#2C2C2C" text="#dcdcdc" link="#8db2e5" alink="#8db2e5" vlink="#c76ed7">
     <h1>鈴音製作所HP (超簡易版)</h1>
     <br>
-    <h2>配布物</h2>
-    <h3 style="padding-left: 40px;" data-mce-style="padding-left: 40px;">スペキュラー京急</h3>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://twitter.com/50105tobu/status/1577687533269360640" data-mce-href="https://twitter.com/50105tobu/status/1577687533269360640">https://twitter.com/50105tobu/status/1577687533269360640</a></p>
-    <br>
     <h2>資料室</h2>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;">主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開する予定です。</p>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1">https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1</a></p>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br data-mce-bogus="1"></p>
+    <div>
+        <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開する予定です。</p>
+        <p><a href="https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1">https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1</a></p>
+    </div>
+    <br>
+    <br>
+    <h2>配布物</h2>
+    <div>
+        <h3>SEUS Renewed用 京急1000形アルミ車</h3>
+        <img src="images/specularKeikyu.png">
+        <p>※この追加パックは、ばる様の「<a href="http://sakuratrans.web.fc2.com/rtm.html">ばる京急</a>」アドオンを改造したものになります。</p>
+        <p><a href="https://twitter.com/50105tobu/status/1577687533269360640">ver1.0</a></p>
+    </div>
+    <br>
+    <div>
+        <h3>コンパウンドカテナリー＆架線柱</h3>
+        <img src="images/RYN_CompoundCatenaryPack.png">
+        <p><a href="https://twitter.com/50105tobu/status/1370698881483251718">ver1.1.2</a></p>
+        <p><a href="https://twitter.com/50105tobu/status/1341777685576441856">ver1.0</a></p>
+    </div>
+    <br>
+    <div>
+        <h3>小物系追加パック</h3>
+        <img src="images/komonoPackB1.0.png">
+        <p><a href="https://twitter.com/50105tobu/status/1370698881483251718">beta1.2</a></p>
+        <p><a href="https://twitter.com/50105tobu/status/1216724364915118081">beta1.1</a></p>
+        <p><a href="https://twitter.com/50105tobu/status/1212040089791909888">beta1.0</a></p>
+    </div>
     <br>
     <h2>活動場所</h2>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg" data-mce-href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg">YouTube</a></p>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><a href="https://twitter.com/50105tobu" data-mce-href="https://twitter.com/50105tobu">Twitter</a></p>
-    <p style="padding-left: 40px;" data-mce-style="padding-left: 40px;"><br></p>
-  </font>
+    <div>
+        <p><a href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg" data-mce-href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg">YouTube</a></p>
+        <p><a href="https://twitter.com/50105tobu">Twitter - 鉄道系 (@50105tobu)</a></p>
+    </div>
+
+
+    <style>
+        body {
+            padding-left: 100px
+        }
+
+        div {
+            padding-left: 40px
+        }
+
+        
+        img {
+            width: 500px
+        }
+    </style>
 </body>
 </html>
