アーカイブへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>資料室</h2>
     <div>
         <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開する予定です。</p>
-        <p><a href="https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1">https://drive.google.com/drive/u/1/folders/1zHB0gIbaE8J_bjfHVt8Mqu72-6jHnMK1</a></p>
+        <p><a href="archives.html">別ページ</a></p>
     </div>
     <br>
     <br>
