--- a/archives.html
+++ b/archives.html
@@ -7,7 +7,9 @@
 <body>
     <h1>資料室</h1>
     <div>
-        <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開するページです。</p>
+        <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開するページです。
+        <br>車両を再現する用途を想定して素材を収集しています。
+        </p>
     </div>
     <br>
     <br>
