add google analytics

--- a/index.html
+++ b/index.html
@@ -44,5 +44,15 @@
     </div>
     <br>
     <br>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7PHWX2ZMH8"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7PHWX2ZMH8');
+    </script>
 </body>
 </html>
