--- a/archives.html
+++ b/archives.html
@@ -4,6 +4,17 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="style.css" rel="stylesheet">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7PHWX2ZMH8"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-7PHWX2ZMH8');
+</script>
+
 <body>
     <h1>資料室</h1>
     <div>
