--- a/archives.html
+++ b/archives.html
@@ -31,7 +31,7 @@
             <h4>1次車 1017F</h4>
             <div>
                 <p>3Dスキャンデータ (iPhone LiDAR)</p>
-                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">浦賀方 先頭車(準備中)</a> (CC BY-SA 4.0)</p>
+                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">浦賀方 先頭車</a> (CC BY-SA 4.0)</p>
             
             </div>
         </div>
