--- a/archives.html
+++ b/archives.html
@@ -21,24 +21,27 @@ gtag('config', 'G-7PHWX2ZMH8');
         <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開するページです。
         <br>車両を再現する用途を想定して素材を収集しています。
         </p>
-        <p>3DスキャンデータはiPhoneのLiDARセンサーで取得したものになりますので、（特に広域において）ポリゴンの寸法の精度は期待出来ません。また、テクスチャの貼り付け位置も正確とは限りません。モデリングには補助程度にお使い下さい。</p>
+        <p>3DスキャンデータはiPhoneのLiDARセンサーで取得したものになりますので、ポリゴンの寸法の正確さには期待出来ません。また、テクスチャの貼り付け位置も正確とは限りません。モデリングには補助程度にお使い下さい。</p>
     </div>
     <br>
     <br>
     <h2>都営車</h2>
     <div>
-        <h3>5300形 5320F</h3>
+        <h3>5300形</h3>
         <div>
-            <p class="contents_category">資料画像</p>
-            <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">床下機器(海,山側)</a> (CC BY-SA 4.0)</p>
-            <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">屋根上</a> (CC BY-SA 4.0)</p>
-            <br>
-            <p class="contents_category">3Dスキャンデータ</p>
-            <img src="images/5320_front_outside.png">
-            <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">先頭車両 外装</a> (CC BY-SA 4.0)</p>
-            <br>
-            <img src="images/5320_cockpit.png">
-            <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">運転台</a> (CC BY-SA 4.0)</p>
+            <h4>5320F</h4>
+            <div>
+                <p class="contents_category">資料画像</p>
+                <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">床下機器(海,山側)</a> (CC BY-SA 4.0)</p>
+                <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">屋根上</a> (CC BY-SA 4.0)</p>
+                <br>
+                <p class="contents_category">3Dスキャンデータ</p>
+                <img src="images/5320_front_outside.jpg">
+                <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">浦賀方 先頭車両 外装</a> (CC BY-SA 4.0)</p>
+                <br>
+                <img src="images/5320_cockpit.jpg">
+                <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">成田方面 運転台</a> (CC BY-SA 4.0)</p>
+            </div>
         </div>
     </div>
     <br>
@@ -49,7 +52,8 @@ gtag('config', 'G-7PHWX2ZMH8');
             <h4>1次車 1017F</h4>
             <div>
                 <p class="contents_category">3Dスキャンデータ</p>
-                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">浦賀方 先頭車</a> (CC BY-SA 4.0)</p>
+                <img src="images/1017_front_outside.jpg">
+                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">浦賀方 先頭車 外装</a> (CC BY-SA 4.0)</p>
             
             </div>
         </div>
