--- a/archives.html
+++ b/archives.html
@@ -37,10 +37,10 @@ gtag('config', 'G-7PHWX2ZMH8');
                 <br>
                 <p class="contents_category">3Dスキャンデータ</p>
                 <img src="images/5320_front_outside.jpg">
-                <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">浦賀方 先頭車両 外装</a> (CC BY-SA 4.0)</p>
+                <p><a href="https://drive.google.com/drive/folders/1EluCCI9wE_kvjf13shN2jaWfvfJvi85V?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
                 <br>
                 <img src="images/5320_cockpit.jpg">
-                <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">成田方面 運転台</a> (CC BY-SA 4.0)</p>
+                <p><a href="https://drive.google.com/drive/folders/17CtYr99jPqg9vJc3E5lAnu6b82FNw4NT?usp=share_link">(8号車) 運転台</a> (CC BY-SA 4.0)</p>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@ gtag('config', 'G-7PHWX2ZMH8');
             <div>
                 <p class="contents_category">3Dスキャンデータ</p>
                 <img src="images/1017_front_outside.jpg">
-                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">浦賀方 先頭車 外装</a> (CC BY-SA 4.0)</p>
+                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
             
             </div>
         </div>
