--- a/archives.html
+++ b/archives.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="style.css" rel="stylesheet">
+  <title>資料室 - 鈴音製作所</title>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -16,7 +17,7 @@ gtag('config', 'G-7PHWX2ZMH8');
 </script>
 
 <body>
-    <h1>資料室</h1>
+    <h1>鈴音製作所 資料室</h1>
     <div>
         <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開するページです。
         <br>車両を再現する用途を想定して素材を収集しています。
@@ -58,6 +59,9 @@ gtag('config', 'G-7PHWX2ZMH8');
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <p><a href="index.html">ホームに戻る</a></p>
     <br>
     <br>
 </body>
