--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="style.css" rel="stylesheet">
+  <title>ホームページ - 鈴音製作所</title>
 </head>
 
 <!-- Google tag (gtag.js) -->
