--- a/archives.html
+++ b/archives.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link href="style.css" rel="stylesheet">
-    <title>資料室 - 鈴音製作所</title>
-
-    <!-- Import the component -->
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <link href="style.css" rel="stylesheet">
+  <title>資料室 - 鈴音製作所</title>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -41,10 +38,10 @@ gtag('config', 'G-7PHWX2ZMH8');
                 <br>
                 <p class="contents_category">3Dスキャンデータ</p>
                 <img src="images/5320_front_outside.jpg">
-                <p><a href="https://drive.google.com/drive/folders/1EluCCI9wE_kvjf13shN2jaWfvfJvi85V?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)        <button type=“button” onclick="location.href='#5320_front_outside_AR'">モデル表示</button></p>
+                <p><a href="https://drive.google.com/drive/folders/1EluCCI9wE_kvjf13shN2jaWfvfJvi85V?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
                 <br>
                 <img src="images/5320_cockpit.jpg">
-                <p><a href="https://drive.google.com/drive/folders/17CtYr99jPqg9vJc3E5lAnu6b82FNw4NT?usp=share_link">(8号車) 運転台</a> (CC BY-SA 4.0)              <button type=“button” onclick="location.href='#5320_cockpit_AR'">モデル表示</button></p>
+                <p><a href="https://drive.google.com/drive/folders/17CtYr99jPqg9vJc3E5lAnu6b82FNw4NT?usp=share_link">(8号車) 運転台</a> (CC BY-SA 4.0)</p>
             </div>
         </div>
     </div>
@@ -57,48 +54,15 @@ gtag('config', 'G-7PHWX2ZMH8');
             <div>
                 <p class="contents_category">3Dスキャンデータ</p>
                 <img src="images/1017_front_outside.jpg">
-                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)        <button type=“button” onclick="location.href='#1017_front_outside_AR'">モデル表示</button></p>
+                <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
+            
             </div>
         </div>
     </div>
     <br>
     <br>
+    <p><a href="index.html">ホームに戻る</a></p>
     <br>
     <br>
-    <h2>モデルプレビュー</h2>
-    <div>
-        <a id="5320_front_outside_AR">
-            <model-viewer
-            ar
-            src="ARmodels/5320-1_front_outside.glb"
-            alt="Keikyu 1017F frontcar 3D model"
-            camera-controls
-            quick-look-browsers = "safari chrome"
-            ></model-viewer>
-        </a>
-        <br>
-        <br>
-        <a id="5320_cockpit_AR">
-            <model-viewer
-            ar
-            src="ARmodels/5320_cockpit.glb"
-            alt="Keikyu 1017F frontcar 3D model"
-            camera-controls
-            quick-look-browsers = "safari chrome"
-            ></model-viewer>
-        </a>
-        <br>
-        <br>
-        <a id="1017_front_outside_AR">
-            <model-viewer
-            ar
-            src="ARmodels/1017_frontcar_outside.glb"
-            alt="Keikyu 1017F frontcar 3D model"
-            camera-controls
-            quick-look-browsers = "safari chrome"
-            ></model-viewer>
-        </a>
-        
-    </div>
 </body>
 </html>
