--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ gtag('config', 'G-7PHWX2ZMH8');
     </div>
     <br>
     <br>
-    <h2>配布物</h2>
+    <h2>Minecraft - RealTrainMod用 配布物</h2>
     <div>
         <h3>SEUS Renewed用 京急1000形アルミ車</h3>
         <img src="images/specularKeikyu.png">
