お知らせ追加

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="style.css" rel="stylesheet">
-  <title>ホームページ - 鈴音製作所</title>
+  <title>ホーム - 鈴音製作所 (50105tobu)</title>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -20,6 +20,22 @@ gtag('config', 'G-7PHWX2ZMH8');
     
 
     <h1>鈴音製作所HP (超簡易版)</h1>
+    <br>
+    <h2>お知らせ</h2>
+    <div class="box1">
+        <p>本日(2023.07.11) 生年月日を入力したため <font color="#ff4500">Twitter鉄道アカウント @50105tobuがロックされています。</font></p>
+        <p>ご迷惑をお掛けしますが、ご連絡は<a href="https://twitter.com/reynsaaan">Twitter @reynsaaan</a>へよろしくお願い致します。</p>
+        <p>つきましては本ページの配布物のリンクが切れた状態です。数日以内にDLリンクを復旧させる予定です。</p>
+        <br>
+        <p>原因</p>
+        <p>現在は年齢基準を満たしていますが、アカウント作成年が2015年となっており、13歳より前にアカウントが作られた判定となってしまったためロックされたと思われます。</p>
+        <p>(アカウント作成年について： 親と共同で使用しているメールアドレスのアカウントなので、何らかの操作で私の利用開始より前にアカウントが作られていたと推測します。)</p>
+        <br>
+        <p><b>復旧時期は未定です。ご心配、ご迷惑をお掛けして申し訳ありません。</b></p>
+        <br>
+        <p>現状のTwitter一極集中状態だと、今回のようなTwitter障害時に私の情報が見れなくなってしまう事を鑑み、ホームページの機能強化をする予定です。</p>
+    </div>
+    <br>
     <br>
     <h2>資料室</h2>
     <div>
@@ -55,6 +71,8 @@ gtag('config', 'G-7PHWX2ZMH8');
     <div>
         <p><a href="https://www.youtube.com/channel/UCIhC-kSeKOt3Y18QWbWRZCg">YouTube</a></p>
         <p><a href="https://twitter.com/50105tobu">Twitter - 鉄道系 (@50105tobu)</a></p>
+        <p><a href="https://twitter.com/rain_y6">Twitter - 質問箱回答 (@rain_y6)</a></p>
+        <p><a href="https://twitter.com/reynsaaan">Twitter - マイクラ / 適当なつぶやき (@reynsaaan)</a></p>
     </div>
     <br>
     <br>
