フォトグラメトリ公開 & 項目を見やすく

--- a/archives.html
+++ b/archives.html
@@ -17,12 +17,12 @@ gtag('config', 'G-7PHWX2ZMH8');
 </script>
 
 <body>
-    <h1>鈴音製作所 資料室</h1>
+    <h1>鈴音製作所 資料室 (簡易版)</h1>
     <div>
         <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開するページです。
         <br>車両を再現する用途を想定して素材を収集しています。
         </p>
-        <p>3DスキャンデータはiPhoneのLiDARセンサーで取得したものになりますので、ポリゴンの寸法の正確さには期待出来ません。また、テクスチャの貼り付け位置も正確とは限りません。モデリングには補助程度にお使い下さい。</p>
+        <p>3DスキャンデータはiPhoneのLiDARセンサーで取得したものになりますので、ポリゴンの寸法の正確さにはあまり期待できません。また、テクスチャの貼り付け位置も正確とは限りません。モデリングには補助程度にお使い下さい。</p>
     </div>
     <br>
     <br>
@@ -36,12 +36,17 @@ gtag('config', 'G-7PHWX2ZMH8');
                 <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">床下機器(海,山側)</a> (CC BY-SA 4.0)</p>
                 <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">屋根上</a> (CC BY-SA 4.0)</p>
                 <br>
+                <p class="contents_category">フォトグラメトリ</p>
+                <img src="images/5320-8_photogrametry_exterior.jpg">
+                <p><a href="https://drive.google.com/drive/folders/1JM7cUN7NmnSkUzLtZOj3YHJ0TCLQQOrI?usp=share_link">(8号車) 先頭車両 海側外装</a> (CC BY-SA 4.0)</p>
+                <br>
                 <p class="contents_category">3Dスキャンデータ</p>
                 <img src="images/5320_front_outside.jpg">
                 <p><a href="https://drive.google.com/drive/folders/1EluCCI9wE_kvjf13shN2jaWfvfJvi85V?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
                 <br>
                 <img src="images/5320_cockpit.jpg">
                 <p><a href="https://drive.google.com/drive/folders/17CtYr99jPqg9vJc3E5lAnu6b82FNw4NT?usp=share_link">(8号車) 運転台</a> (CC BY-SA 4.0)</p>
+                
             </div>
         </div>
     </div>
@@ -52,7 +57,7 @@ gtag('config', 'G-7PHWX2ZMH8');
         <div>
             <h4>1次車 1017F</h4>
             <div>
-                <p class="contents_category">3Dスキャンデータ</p>
+                <p class="contents_category">3Dスキャンデータ (iPhone LiDAR)</p>
                 <img src="images/1017_front_outside.jpg">
                 <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
             
