--- a/index.html
+++ b/index.html
@@ -21,27 +21,10 @@ gtag('config', 'G-7PHWX2ZMH8');
 
     <h1>鈴音製作所HP (超簡易版)</h1>
     <br>
-    <h2>お知らせ</h2>
-    <div class="box1">
-        <p><s>本日 (2023.07.11) 生年月日を入力したため <font color="#ff4500">Twitter鉄道アカウント @50105tobuがロックされました。</font></s></p>
-        <p><s>ご迷惑をお掛けしますが、ご連絡は<a href="https://twitter.com/reynsaaan">Twitter @reynsaaan</a>へよろしくお願い致します。</s></p>
-        <p><s>つきましては本ページの配布物のリンクが切れた状態です。数日以内にDLリンクを復旧させる予定です。</s></p>
-        <p>追記 (2023.07.14) アカウントのロックが解除されました。</p>
-        <br>
-        <p>原因</p>
-        <p>現在は年齢基準を満たしていますが、アカウント作成年が2015年となっており、13歳より前にアカウントが作られた判定となってしまったためロックされたと思われます。</p>
-        <p>(アカウント作成年について： 親と共同で使用しているメールアドレスのアカウントなので、何らかの操作で私の利用開始より前にアカウントが作られていたと推測します。)</p>
-        <br>
-        <p><b><s>復旧時期は未定です。</s>ご心配、ご迷惑をお掛けして申し訳ありません。</b></p>
-        <br>
-        <p>現状のTwitter一極集中状態だと、今回のようなTwitter障害時に私の情報が見れなくなってしまう事を鑑み、ホームページの機能強化をする予定です。</p>
-    </div>
-    <br>
-    <br>
     <h2>資料室</h2>
     <div>
         <p>主に都営浅草線、京急線、京成線、北総線を走る車両の画像、音声、動画資料、スキャンデータを公開する予定です。</p>
-        <p><a href="archives.html">別ページ</a></p>
+        <p><a href="archives.html">鈴音製作所 資料室</a></p>
     </div>
     <br>
     <br>
