写真変更 撮影日追加

--- a/archives.html
+++ b/archives.html
@@ -37,15 +37,18 @@ gtag('config', 'G-7PHWX2ZMH8');
                 <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">屋根上</a> (CC BY-SA 4.0)</p>
                 <br>
                 <p class="contents_category">フォトグラメトリ</p>
-                <img src="images/5320-8_photogrametry_exterior.jpg">
+                <img src="images/5320-8_photogrametry_exterior2.jpg">
                 <p><a href="https://drive.google.com/drive/folders/1JM7cUN7NmnSkUzLtZOj3YHJ0TCLQQOrI?usp=share_link">(8号車) 先頭車両 海側外装</a> (CC BY-SA 4.0)</p>
+                <p>撮影日:2023-06-16</p>
                 <br>
                 <p class="contents_category">3Dスキャンデータ</p>
                 <img src="images/5320_front_outside.jpg">
                 <p><a href="https://drive.google.com/drive/folders/1EluCCI9wE_kvjf13shN2jaWfvfJvi85V?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
+                <p>撮影日:2022-06-20</p>
                 <br>
                 <img src="images/5320_cockpit.jpg">
                 <p><a href="https://drive.google.com/drive/folders/17CtYr99jPqg9vJc3E5lAnu6b82FNw4NT?usp=share_link">(8号車) 運転台</a> (CC BY-SA 4.0)</p>
+                <p>撮影日:2022-08-31</p>
                 
             </div>
         </div>
@@ -60,6 +63,7 @@ gtag('config', 'G-7PHWX2ZMH8');
                 <p class="contents_category">3Dスキャンデータ (iPhone LiDAR)</p>
                 <img src="images/1017_front_outside.jpg">
                 <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
+                <p>撮影日:2022-12-18</p>
             
             </div>
         </div>
