ライセンス変更

--- a/archives.html
+++ b/archives.html
@@ -38,7 +38,7 @@ gtag('config', 'G-7PHWX2ZMH8');
                 <br>
                 <p class="contents_category">フォトグラメトリ</p>
                 <img src="images/5320-8_photogrametry_exterior2.jpg">
-                <p><a href="https://drive.google.com/drive/folders/1JM7cUN7NmnSkUzLtZOj3YHJ0TCLQQOrI?usp=share_link">(8号車) 先頭車両 海側外装</a> (CC BY-SA 4.0)</p>
+                <p><a href="https://drive.google.com/drive/folders/1JM7cUN7NmnSkUzLtZOj3YHJ0TCLQQOrI?usp=share_link">(8号車) 先頭車両 海側外装</a> (ライセンスは同封したtxtファイルにあります)</p>
                 <p>撮影日:2023-06-16</p>
                 <br>
                 <p class="contents_category">3Dスキャンデータ</p>
