ID, スムーススクロール追加

--- a/archives.html
+++ b/archives.html
@@ -26,27 +26,28 @@ gtag('config', 'G-7PHWX2ZMH8');
     </div>
     <br>
     <br>
-    <h2>都営車</h2>
+    <h2 id="toei">都営車</h2>
     <div>
-        <h3>5300形</h3>
+        <h3 id="5300">5300形</h3>
         <div>
-            <h4>5320F</h4>
+            <h4 id="5320f">5320F</h4>
             <div>
-                <p class="contents_category">資料画像</p>
+                <p class="contents_category" id="5320-refpic">資料画像</p>
+                <p>(Google Driveのプレビューが遅いのでダウンロード推奨)</p>
                 <p><a href="https://drive.google.com/drive/folders/1TMhUWZG35EMlfVFvHpGZ4tSj5Hd4LRp5?usp=share_link">床下機器(海,山側)</a> (CC BY-SA 4.0)</p>
                 <p><a href="https://drive.google.com/drive/folders/1KrVZ_UCWTU6aZDWDnQZHxyJe-MwsR2Q0?usp=share_link">屋根上</a> (CC BY-SA 4.0)</p>
                 <br>
-                <p class="contents_category">フォトグラメトリ</p>
+                <p class="contents_category" id="5320-0616photogrametry">フォトグラメトリ</p>
                 <img src="images/5320-8_photogrametry_exterior2.jpg">
                 <p><a href="https://drive.google.com/drive/folders/1JM7cUN7NmnSkUzLtZOj3YHJ0TCLQQOrI?usp=share_link">(8号車) 先頭車両 海側外装</a> (ライセンスは同封したtxtファイルにあります)</p>
                 <p>撮影日:2023-06-16</p>
                 <br>
-                <p class="contents_category">3Dスキャンデータ</p>
-                <img src="images/5320_front_outside.jpg">
+                <p class="contents_category" id="5320-3dscan">3Dスキャンデータ</p>
+                <img src="images/5320_front_outside.jpg" id="5320-front-outside-scan">
                 <p><a href="https://drive.google.com/drive/folders/1EluCCI9wE_kvjf13shN2jaWfvfJvi85V?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
                 <p>撮影日:2022-06-20</p>
                 <br>
-                <img src="images/5320_cockpit.jpg">
+                <img src="images/5320_cockpit.jpg" id="5320-cockpit-scan">
                 <p><a href="https://drive.google.com/drive/folders/17CtYr99jPqg9vJc3E5lAnu6b82FNw4NT?usp=share_link">(8号車) 運転台</a> (CC BY-SA 4.0)</p>
                 <p>撮影日:2022-08-31</p>
                 
@@ -54,14 +55,14 @@ gtag('config', 'G-7PHWX2ZMH8');
         </div>
     </div>
     <br>
-    <h2>京急車</h2>
+    <h2 id="keikyu">京急車</h2>
     <div>
-        <h3>1000形アルミ車</h3>
+        <h3 id="1000a">1000形アルミ車</h3>
         <div>
-            <h4>1次車 1017F</h4>
+            <h4 id="1000-1st">1次車</h4>
             <div>
-                <p class="contents_category">3Dスキャンデータ (iPhone LiDAR)</p>
-                <img src="images/1017_front_outside.jpg">
+                <p class="contents_category" id="1000-1st-3dscan">3Dスキャンデータ (iPhone LiDAR)</p>
+                <img src="images/1017_front_outside.jpg" id="1017_front_outside">
                 <p><a href="https://drive.google.com/drive/folders/1V64d1XATj7FCdBfxveY2kkkPzOHoktqH?usp=share_link">(1号車) 先頭車両 外装</a> (CC BY-SA 4.0)</p>
                 <p>撮影日:2022-12-18</p>
             
